# sample-host-openclaw-on-amazon-bedrock-agentcore

./: .bedrock_agentcore.yaml  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  README中文.md  SECURITY.md  app.py  cdk.json  requirements.txt
admin-ui/: index.html  package-lock.json  package.json
lambda/skill_eval/skill_eval_src/: AGENTS.md  README.md  SKILL.md  demo.sh  pyproject.toml
lambda/skill_eval/skill_eval_src/.github/workflows/: ci.yml  skill-eval.yml
lambda/skill_eval/skill_eval_src/docs/: concepts.md  tutorial.md
lambda/skill_eval/skill_eval_src/docs/reviews/: PHASE2_REVIEW.md  REVIEW.md
lambda/skill_eval/skill_eval_src/examples/data-analysis/: README.md  SKILL.md
lambda/skill_eval/skill_eval_src/examples/f-to-a-improvement/: README.md
lambda/skill_eval/skill_eval_src/examples/golden-dataset/: README.md
lambda/skill_eval/skill_eval_src/references/: cli-reference.md  security-checklist.md  security-checks.md
lambda/skill_eval/skill_eval_src/skill_eval/: _claude.py  agent_runner.py  cli.py  compare.py  config.py  cost.py  eval_schemas.py  explanations.py  html_report.py  init.py  lifecycle.py  regression.py  report.py  schemas.py  unified_report.py
lambda/skill_eval/skill_eval_src/tests/: test_agent_runner.py  test_clawhub_fixtures.py  test_cli.py  test_compare.py  test_config.py  test_cost.py  test_eval_schemas.py  test_golden_bad_skills.py  test_golden_dataset.py  test_html_report.py  test_init.py  test_lifecycle.py  test_permission_analyzer.py  test_regression.py  test_security_scan.py  test_structure_check.py  test_unified_report.py
(+148 files in other folders)
